gitbit/src/components/Accounts/Accounts.css
body {
  margin: 0;
  width: 100vw;
  overflow-x: hidden;
}


.main-content {
  background: linear-gradient(to bottom right, var(--primary), var(--secondary));
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
  width: 100%;
}

.upper-content,
.lower-content {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  align-items: center;
}





.getting-started-header {
  color: #f0f0f0;
  font-size: 30px;
  text-align: center;
}

.github-button {
  border-style: solid;
  border-width: 1px;
  border-color: rgba(255, 255, 255, 0.4);
  background-color: rgba(255, 255, 255, 0.1);
  border-radius: 5px;
  color: white; 
  padding: 10px;
  padding-left: 70px;
  padding-right: 70px;
  margin-top: 15px;
  margin-bottom: 5px;
  transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
}


.github-button:hover {
  background-color: rgba(255, 255, 255, 0.205);
}


.github-button.disable {
  color: rgb(182, 182, 182);
  border-color: rgba(102, 51, 153, 0);
  cursor: not-allowed;
}

.github-button.disable:hover {
  background-color: rgba(255, 255, 255, 0.1);
}



.already-par,
.terms-github {
  margin-top: 0;
  margin-bottom: 0;
  font-size: 13px;
  color: rgba(255, 255, 255, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
}

.already-par {
  margin-top: 10px;
}

.terms-github {
  display: flex;
  align-items: flex-end;
}












/*------------------------------- RESPONSIVENESS -----------------------------------*/
/*------------------------------- RESPONSIVENESS -----------------------------------*/
/*------------------------------- RESPONSIVENESS -----------------------------------*/
/*------------------------------- RESPONSIVENESS -----------------------------------*/
/*------------------------------- RESPONSIVENESS -----------------------------------*/
/*------------------------------- RESPONSIVENESS -----------------------------------*/
/*------------------------------- RESPONSIVENESS -----------------------------------*/
/*------------------------------- RESPONSIVENESS -----------------------------------*/







/*------------------------------- My Phone -----------------------------------*/

@media (max-width: 477px) {
  .getting-started-header {
    font-size: 25px;
    margin-bottom: 20px;
  }

  .github-button {
    padding: 10px;
    padding-left: 50px;
    padding-right: 50px;
    margin-top: 5px;
    margin-bottom: 5px;
  }

  .lower-content {
    margin-top: 10px;
  }
}



@media (max-width: 395px) {
  .getting-started-header {
    font-size: 22px;
    margin-bottom: 10px;
  }

  .github-button {
    font-size: 12px;
    margin-top: 5px;
    margin-bottom: 5px;
  }
}



@media (max-width: 355px) {
  .already-par,
  .terms-github {
    font-size: 12px;
    padding: 0;
  }
}

